# ChatGpt-Desktop-app-RUST

./: .gitignore  Cargo.toml  installation.bash
api/: Cargo.toml
api/src/: lib.rs
headlines/: Cargo.toml
headlines/src/: headlines.rs  lib.rs  main.rs
