[package]
name = "headlines"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api = {path = "../api"}
egui_glow = "0.19.0"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
async-std = { version = "1", features = ["attributes", "tokio1"] }
eframe = {version = "0.17.0" , features = ["persistence"]}      
tracing = "0.1.36"
tracing-subscriber = "0.3.15"    
confy = "0.4.0"
serde = { version = "1.0.144", features = ["derive"] }       
crossbeam-channel = "0.4"                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              